Implemented consensus message epoch state update